--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "vue": "^2.5.22"
   },
   "devDependencies": {
